--- a/Skull_IA/requirements.txt
+++ b/Skull_IA/requirements.txt
@@ -1,70 +1,3 @@
-﻿annotated-types==0.7.0
-anyio==4.9.0
-asttokens==2.4.1
-blinker==1.9.0
-certifi==2025.1.31
-chardet==5.2.0
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-comm==0.2.2
-debugpy==1.8.5
-decorator==5.1.1
-distro==1.9.0
-executing==2.1.0
-filelock==3.18.0
-Flask==3.1.0
-flask-cors==5.0.1
-fsspec==2025.3.2
-h11==0.14.0
-httpcore==1.0.7
-httpx==0.28.1
-huggingface-hub==0.30.2
-idna==3.10
-ipykernel==6.29.5
-ipython==8.27.0
-itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.6
-jiter==0.9.0
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-MarkupSafe==3.0.2
-matplotlib-inline==0.1.7
-mpmath==1.3.0
-nest-asyncio==1.6.0
-networkx==3.4.2
-numpy==2.2.5
-openai==1.68.2
-packaging==24.1
-parso==0.8.4
-platformdirs==4.3.2
-prompt_toolkit==3.0.47
-psutil==6.0.0
-pure_eval==0.2.3
-PyAudio==0.2.14
-pydantic==2.10.6
-pydantic_core==2.27.2
-pyfiglet==1.0.2
-Pygments==2.18.0
-python-dateutil==2.9.0.post0
-PyYAML==6.0.2
-pyzmq==26.2.0
-regex==2024.11.6
-requests==2.32.3
-safetensors==0.5.3
-six==1.16.0
-sniffio==1.3.1
-stack-data==0.6.3
-sympy==1.14.0
-tokenizers==0.21.1
-torch==2.7.0
-tornado==6.4.1
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.51.3
-typing_extensions==4.12.2
-urllib3==2.4.0
-wcwidth==0.2.13
-websocket-client==1.8.0
-Werkzeug==3.1.3
+Flask==2.1.2
+Flask-Cors==3.1.1
+openai==0.27.0
