--- a/Orion-Core-Team-main/Orion-Core-Team-main/hackteen-reactjs/public/manifest.json
+++ b/Orion-Core-Team-main/Orion-Core-Team-main/hackteen-reactjs/public/manifest.json
@@ -8,14 +8,14 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "slogan.webp",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "291x192"
     },
     {
-      "src": "logo512.png",
+      "src": "slogan.webp",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "614x512"
     }
   ],
   "start_url": ".",
